--- a/Jeux/spaceinvaders.html
+++ b/Jeux/spaceinvaders.html
@@ -38,7 +38,6 @@
       context.fillStyle = "#FFFFFF";
       context.fillRect(player.x, player.y, player.width, player.height);
     }
-
     function drawProjectiles() {
       context.fillStyle = "#EB0707";
 
@@ -48,8 +47,10 @@
     }
     function drawInvaders() {
       context.fillStyle = "#00D42A";
+      for (var i = 0; i < invaders.length; i++) {
+      context.fillRect(invaders[i].x, invaders[i].y, invaders[i].width, invaders[i].height);
+      }
     }
-
     function updateProjectiles() {
       for (var i = 0; i < projectiles.length; i++) {
         projectiles[i].y -= 2;
@@ -59,6 +60,9 @@
           i--;
         }
       }
+    }
+    function updateInvaders() {
+
     }
 
     document.addEventListener("keydown", function (event) {
@@ -114,10 +118,12 @@
     function gameLoop() {
       context.clearRect(0, 0, canvas.width, canvas.height);
       drawPlayer();
+      drawInvaders();
       drawProjectiles();
       updateProjectiles();
 
     }
+    setInterval(gameLoop, 16);
   </script>
 
 </body>
