Début de rédaction du CV

--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Mon Portfolio</title>
     <style>
@@ -57,14 +58,16 @@
         }
     </style>
 </head>
+
 <body>
     <header>
-        <h1>Nom ou Logo</h1>
+        <h1>Alexandre Deperdu Castel</h1>
     </header>
 
     <section id="presentation">
         <h2>Présentation personnelle</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec convallis ligula in dolor consequat, ut efficitur lorem auctor.</p>
+        <p>Étudiant très intéressé par le monde de l'informatique et des nouvelles technologies. Toujours désireux
+            d'apprendre, d'assumer plus de responsabilités et de grandir sur le plan professionnel. </p>
         <img src="profil.jpg" alt="Photo de profil">
     </section>
 
@@ -85,4 +88,5 @@
         </ul>
     </footer>
 </body>
+
 </html>
