Ajout des expériences pro au CV

--- a/cv.html
+++ b/cv.html
@@ -71,6 +71,34 @@
         <img src="profil.jpg" alt="Photo de profil">
     </section>
 
+    <section id="experiences">
+        <h2>Expériences Professionnelles</h2>
+        <ul>
+            <li><h3>Gestionnaire Base de données</h3>
+                <h4>CEDEMO MONACO| Juillet 2017(Stage)</h4>
+                <p>Traitement de divers documents et saisi des informations dans une base de
+                    données<br>
+                    Apprentissage de la structure hiérarchique d'une entreprise<br>
+                    Communication avec les divers pôles de l'entreprise pour l'initiation aux
+                    échanges dans un cadre professionnel.</p>
+            </li>
+            <li><h3>Chargé de projet</h3>
+                <h4>SEPM MONACO| Juin-Juillet 2022(Stage)</h4>
+                <p>-Installation de postes de travail dans tous les locaux ainsi que le service
+                    après installation pour tous les problèmes<br>
+                    Gestion de la mise en circulation d'une application mobile<br>
+                    Apprentissage sur l'infrastructure réseau et machine au sien d'une entreprise</p>
+            </li>
+            <li><h3>Chargé de projet</h3>
+                <h4>Global Signa France| Janvier-Février(Stage)</h4>
+                <p>-Développement d'un intranet ayant tout un fonctionnement de pointeuse et
+                    de gestions d'informations d'employés via du PHP, javascript et html<br>
+                    -Chargé de la maintenance et de la mise en cloud de serveurs<br>
+                    -Apprentissage sur l'utilisations d'outils comme Wordpress et éditeurs de
+                    sites</p>
+            </li>
+        </ul>
+    </section>
     <section id="projets">
         <h2>Projets récents</h2>
         <ul>
