Ajout de la scolarité

--- a/cv.html
+++ b/cv.html
@@ -99,12 +99,18 @@
             </li>
         </ul>
     </section>
-    <section id="projets">
+    <section id="formations">
         <h2>Projets récents</h2>
         <ul>
-            <li><a href="#">Projet 1</a></li>
-            <li><a href="#">Projet 2</a></li>
-            <li><a href="#">Projet 3</a></li>
+            <li><h3>EPSI Toulouse</h3>
+                <h4>Bachelor DevOps, promo 2024 | Master IA, promo 2026</h4>
+                <p>-Formation dans le cadre du contact client dans le
+                    monde de l'informatique<br>
+                    -Formation en Full Stack et en infrastructure réseau<br>
+                    -Formation en cyber sécurité</p></li>
+            <li><h3>Lycée Privé Michelet Nice</h3>
+                <h4>Seconde - Terminal Obtention bac, promo 2021</h4>
+                <p>-Obtention du baccalauréat en spécialité NSI en première et Maths Physique au bac avec mention Bien/p></li>
         </ul>
     </section>
 
