Ajout des liens

--- a/cv.html
+++ b/cv.html
@@ -116,9 +116,9 @@
 
     <footer>
         <ul>
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">Email</a></li>
+            <li><a href="https://www.linkedin.com/in/alexandre-deperdu-castel/">LinkedIn</a></li>
+            <li><a href="https://github.com/alkrynax">GitHub</a></li>
+            <li><a href="adeperdu@gmail.com">Email</a></li>
         </ul>
     </footer>
 </body>
