Ajout d'une photo de profil

--- a/cv.html
+++ b/cv.html
@@ -62,13 +62,13 @@
 <body>
     <header>
         <h1>Alexandre Deperdu Castel</h1>
+        <img src="image.jpg" alt="Photo de profil">
     </header>
 
     <section id="presentation">
         <h2>Présentation personnelle</h2>
         <p>Étudiant très intéressé par le monde de l'informatique et des nouvelles technologies. Toujours désireux
             d'apprendre, d'assumer plus de responsabilités et de grandir sur le plan professionnel. </p>
-        <img src="profil.jpg" alt="Photo de profil">
     </section>
 
     <section id="experiences">
