--- a/home.html
+++ b/home.html
@@ -30,7 +30,27 @@
 </head>
 
 <body>
+    <div id="clock"></div>
 <div id="wp-custom-header" class="wp-custom-header"><img src="https://t4.ftcdn.net/jpg/05/54/47/79/360_F_554477926_yKEcMeDTD1oLqKQCjvpryeT5zHLMunNh.jpg" width="2000" height="1200" alt=""></div>
 </body>
+<script>
+    function updateClock() {
+      var now = new Date();
+      var hours = now.getHours();
+      var minutes = now.getMinutes();
+      var seconds = now.getSeconds();
+
+      hours = hours.toString().padStart(2, "0");
+      minutes = minutes.toString().padStart(2, "0");
+      seconds = seconds.toString().padStart(2, "0");
+
+      var time = hours + ":" + minutes + ":" + seconds;
+      document.getElementById("clock").textContent = time;
+
+      setTimeout(updateClock, 1000);
+    }
+
+    updateClock();
+</script>
 
 </html>
