Ajout d'une barre de navigation

--- a/cv.html
+++ b/cv.html
@@ -61,10 +61,18 @@
 
 <body>
     <header>
-        <h1>Alexandre Deperdu Castel</h1>
-        <img src="image.jpg" alt="Photo de profil">
+        <nav>
+            <ul>
+              <li class="active"><a href="home.html">Accueil</a></li>
+              <li><a href="jeux/spaceinvaders.html">Space Invaders</a></li>
+              <li><a href="cv.html">CV</a></li>
+            </ul>
+        </nav>
+        
     </header>
-
+    <img src="image.jpg" alt="Photo de profil" width="240" height="240">
+    <h1>Alexandre Deperdu Castel</h1>
+    
     <section id="presentation">
         <h2>Présentation personnelle</h2>
         <p>Étudiant très intéressé par le monde de l'informatique et des nouvelles technologies. Toujours désireux
