--- a/home.html
+++ b/home.html
@@ -2,34 +2,72 @@
 <html>
 
 <head>
-    <title>Portfolio Alexandre Deperdu Castel</title>
-</head>
+    <title>Mon Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
 
-</html>
-<style>
-    body {
-         font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 20px;
-        background-color: #f1f1f1;
-    }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+        }
 
-    .container {
-        max-width: 768px;
-        margin: 0 auto;
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
+        h1 {
+            margin: 0;
+        }
 
-    h1 {
-        text-align: center;
-    }
-</style>
+        section {
+            padding: 20px;
+        }
+
+        #presentation img {
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 50%;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        footer ul {
+            display: flex;
+            justify-content: center;
+        }
+
+        footer li {
+            margin: 0 10px;
+        }
+
+        a {
+            color: #fff;
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+              <li class="active"><a href="home.html">Accueil</a></li>
+              <li><a href="jeux/spaceinvaders.html">Space Invaders</a></li>
+              <li><a href="cv.html">CV</a></li>
+            </ul>
+        </nav>
     <div id="clock"></div>
 <div id="wp-custom-header" class="wp-custom-header"><img src="https://t4.ftcdn.net/jpg/05/54/47/79/360_F_554477926_yKEcMeDTD1oLqKQCjvpryeT5zHLMunNh.jpg" width="2000" height="1200" alt=""></div>
 </body>
