--- a/Jeux/spaceinvaders.html
+++ b/Jeux/spaceinvaders.html
@@ -9,6 +9,16 @@
     }
   </style>
 </head>
+<header>
+  <nav>
+      <ul>
+        <li class="active"><a href="home.html">Accueil</a></li>
+        <li><a href="jeux/spaceinvaders.html">Space Invaders</a></li>
+        <li><a href="cv.html">CV</a></li>
+      </ul>
+  </nav>
+  
+</header>
 
 <body>
   <canvas id="gameCanvas" width="1200" height="600"></canvas>
