--- a/reseaux.html
+++ b/reseaux.html
@@ -8,7 +8,7 @@
 </html>
 <style>
     body {
-         font-family: Arial, sans-serif;
+        font-family: Arial, sans-serif;
         margin: 0;
         padding: 20px;
         background-color: #f1f1f1;
@@ -28,6 +28,16 @@
     }
 </style>
 </head>
+<header>
+    <nav>
+        <ul>
+            <li class="active"><a href="home.html">Accueil</a></li>
+            <li><a href="jeux/spaceinvaders.html">Space Invaders</a></li>
+            <li><a href="cv.html">CV</a></li>
+        </ul>
+    </nav>
+
+</header>
 
 <body>
 </body>
